tests/parsing/smtlib/poly/errors/184_par_open_type_var.psmt2
(set-logic ALL)
(declare-fun foo (par _
