tests/parsing/smtlib/poly/errors/184_par_open_type_var.expected
File "tests/parsing/smtlib/poly/errors/184_par_open_type_var.psmt2", line 2, character 22-23:
2 | (declare-fun foo (par _
                          ^
Error while parsing the list of type variable of a function declaration,
      read the reserved word '_',
      but expected an opening parenthesis.
